Fix grid gap between Pet detail sections

--- a/client/src/components/petdetails/petdetails.css
+++ b/client/src/components/petdetails/petdetails.css
@@ -15,7 +15,7 @@
   .pet-details-grid {
     display: grid;
     grid-template-columns: 1fr 3fr;
-    grid-gap: 1em;
+    grid-gap: 3em;
   }
 
   @media screen and (max-width: 600px) {
